adding analysis for a single experiment

--- a/analysis/Random Distributions.ipynb
+++ b/analysis/Random Distributions.ipynb
@@ -9,16 +9,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib inline"
+    "%matplotlib widget"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,13 +51,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8f560ee1561c4133b98b5f1adf049057",
+       "model_id": "c08a1e9ff5b5464794ab9bdcf957bbef",
        "version_major": 2,
        "version_minor": 0
       },
@@ -77,13 +77,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5f37be7665e948f9abb51989ca303315",
+       "model_id": "dcb197f16c1c47468bf6f81c04aa9427",
        "version_major": 2,
        "version_minor": 0
       },
@@ -101,6 +101,13 @@
     "def gauss(sd, maxkey):\n",
     "    plot(lambda: random.gauss(0, 1) * ((maxkey/2)*sd) + (maxkey/2), maxkey)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
