--- a/analysis/Random Distributions.ipynb
+++ b/analysis/Random Distributions.ipynb
@@ -9,8 +9,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "%matplotlib widget"
@@ -18,19 +22,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "import random\n",
     "import pandas as pd\n",
     "import ipywidgets as widgets\n",
+    "import matplotlib.pyplot as plt\n",
     "from ipywidgets import interact"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,19 +54,24 @@
     "                num = round(fn())\n",
     "            yield num\n",
     "\n",
+    "    plt.close()\n",
     "    df = pd.DataFrame(gen(maxkey))\n",
     "    df.plot.hist(legend=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c08a1e9ff5b5464794ab9bdcf957bbef",
+       "model_id": "3667d99c40174c31934bd2350c417e7a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -77,13 +91,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dcb197f16c1c47468bf6f81c04aa9427",
+       "model_id": "fbe3fd192c5e4576976070036d6fad2c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -101,13 +115,6 @@
     "def gauss(sd, maxkey):\n",
     "    plot(lambda: random.gauss(0, 1) * ((maxkey/2)*sd) + (maxkey/2), maxkey)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
